; ModuleID = '/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-vt8500.c_vt8500_alarm_irq_enable.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/rtc/extr_rtc-vt8500.c_vt8500_alarm_irq_enable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.device = type { i32 }
%struct.vt8500_rtc = type { i64 }

@VT8500_RTC_AS = common dso_local global i64 0, align 8
@ALARM_ENABLE_MASK = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.device*, i32)* @vt8500_alarm_irq_enable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @vt8500_alarm_irq_enable(%struct.device* %0, i32 %1) #0 {
  %3 = alloca %struct.device*, align 8
  %4 = alloca i32, align 4
  %5 = alloca %struct.vt8500_rtc*, align 8
  %6 = alloca i64, align 8
  store %struct.device* %0, %struct.device** %3, align 8
  store i32 %1, i32* %4, align 4
  %7 = load %struct.device*, %struct.device** %3, align 8
  %8 = call %struct.vt8500_rtc* @dev_get_drvdata(%struct.device* %7)
  store %struct.vt8500_rtc* %8, %struct.vt8500_rtc** %5, align 8
  %9 = load %struct.vt8500_rtc*, %struct.vt8500_rtc** %5, align 8
  %10 = getelementptr inbounds %struct.vt8500_rtc, %struct.vt8500_rtc* %9, i32 0, i32 0
  %11 = load i64, i64* %10, align 8
  %12 = load i64, i64* @VT8500_RTC_AS, align 8
  %13 = add nsw i64 %11, %12
  %14 = call i64 @readl(i64 %13)
  store i64 %14, i64* %6, align 8
  %15 = load i32, i32* %4, align 4
  %16 = icmp ne i32 %15, 0
  br i1 %16, label %17, label %21

17:                                               ; preds = %2
  %18 = load i64, i64* @ALARM_ENABLE_MASK, align 8
  %19 = load i64, i64* %6, align 8
  %20 = or i64 %19, %18
  store i64 %20, i64* %6, align 8
  br label %26

21:                                               ; preds = %2
  %22 = load i64, i64* @ALARM_ENABLE_MASK, align 8
  %23 = xor i64 %22, -1
  %24 = load i64, i64* %6, align 8
  %25 = and i64 %24, %23
  store i64 %25, i64* %6, align 8
  br label %26

26:                                               ; preds = %21, %17
  %27 = load i64, i64* %6, align 8
  %28 = load %struct.vt8500_rtc*, %struct.vt8500_rtc** %5, align 8
  %29 = getelementptr inbounds %struct.vt8500_rtc, %struct.vt8500_rtc* %28, i32 0, i32 0
  %30 = load i64, i64* %29, align 8
  %31 = load i64, i64* @VT8500_RTC_AS, align 8
  %32 = add nsw i64 %30, %31
  %33 = call i32 @writel(i64 %27, i64 %32)
  ret i32 0
}

declare dso_local %struct.vt8500_rtc* @dev_get_drvdata(%struct.device*) #1

declare dso_local i64 @readl(i64) #1

declare dso_local i32 @writel(i64, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
